[BUGFIX] Fix behavior and styling of EXT:form element type listing
With #104901, the migration from <a> to <button> the JavaScript
handlers were not updated to accommodate the new markup,
preventing proper insertion of elements into form creating with EXT:form.

Additionally, the styling was misaligned for elements and page types
in the form.

This patch restores the correct visual styling for the element list and
updates the JavaScript handlers to ensure compatibility with the new
button-based markup.

Resolves: #105929
Related: #104901
Releases: main, 13.4
Reviewed-on: https://review.typo3.org/c/Packages/TYPO3.CMS/+/87752
Tested-by: Benni Mack <benni@typo3.org>
Tested-by: Andreas Kienast <akienast@scripting-base.de>
Tested-by: core-ci <typo3@b13.com>
Tested-by: Benjamin Franzke <ben@bnf.dev>

--- a/typo3/sysext/backend/Resources/Public/Css/backend.css
+++ b/typo3/sysext/backend/Resources/Public/Css/backend.css
@@ -2644,6 +2644,8 @@ typo3-backend-formengine-suggest-result-item .formengine-suggest-result-item-lab
 .btn-block{display:flex;width:100%}
 .btn-block+.btn-block{margin-top:calc(var(--typo3-spacing) * .5)}
 .btn-block-vertical{flex-direction:column;width:100%}
+.btn-align-start{justify-content:start}
+.btn-align-end{justify-content:end}
 .btn-group{position:static}
 .btn-toolbar{gap:.5rem}
 .btn-link{--typo3-btn-padding-y:0;--typo3-btn-padding-x:0;--typo3-btn-focus-border-color:var(--typo3-state-default-focus-border-color)}
